Update password using the service. Create controller. Update OpenAPI description.
